# news-reader

./: README.md  package.json
backend/: .gitignore  Cargo.toml  news.db
backend/migrations/: 20260301070435_init.sql
backend/src/: api.rs  articles.rs  db.rs  main.rs  mute.rs  rss.rs
frontend/: README.md
frontend/src/routes/: +page.svelte
