[package]
name = "news-backend"
version = "0.1.0"
edition = "2021"
    
[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
rss = "2"
chrono = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
